<resources>
    <string name="app_name">MinhaAgenda</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="pessoal">Pessoal</string>
    <string name="trabalho">Trabalho</string>
    <string name="referencia">Referência:</string>
    <string name="salvar">Salvar</string>
    <string name="pesquisar">Pesquisar:</string>
    <string name="exibir_todos_contatos">Exibir todos contatos</string>
    <string name="limpar_tela">Limpar tela</string>
</resources>